src/manifests/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress
    annotations:
        kubernetes.io/ingress.allow-http: "false"
        kubernetes.io/ingress.global-static-ip-name: "challenge-cluster-external-ip"
    labels:
        app: ingress
spec:
    tls:
        - secretName: challenge-cluster-certificate
    backend:
        serviceName: hello-app
        servicePort: 80
    rules:
        - host: "burp.challenge.$DOMAIN_BASE"
          http:
              paths:
                  - backend:
                        serviceName: challenge-burp-service
                        servicePort: 80
        - host: "bregex.challenge.$DOMAIN_BASE"
          http:
              paths:
                  - backend:
                        serviceName: challenge-bregex-service
                        servicePort: 80
        - host: "esii.challenge.$DOMAIN_BASE"
          http:
              paths:
                  - backend:
                        serviceName: challenge-esii-service
                        servicePort: 80
        - host: "template-confusion.challenge.$DOMAIN_BASE"
          http:
              paths:
                  - backend:
                        serviceName: challenge-template-confusion-service
                        servicePort: 80
        - host: "cache-poisoning.challenge.$DOMAIN_BASE"
          http:
              paths:
                  - backend:
                        serviceName: challenge-cache-poisoning-service
                        servicePort: 80
        - host: "cache-deception.challenge.$DOMAIN_BASE"
          http:
              paths:
                  - backend:
                        serviceName: challenge-cache-deception-service
                        servicePort: 80
        - host: "$DOMAIN_BASE"
          http:
              paths:
                  - backend:
                        serviceName: hello-app
                        servicePort: 80
        - host: "*.$DOMAIN_BASE"
          http:
              paths:
                  - backend:
                        serviceName: hello-app
                        servicePort: 80
